--- a/StudyMates/Storyboards/Home.storyboard
+++ b/StudyMates/Storyboards/Home.storyboard
@@ -33,11 +33,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupsTableViewCell" rowHeight="126" id="1X7-ua-k7j" customClass="GroupsTableViewCell" customModule="StudyMates" customModuleProvider="target">
+                                    <tableViewCell autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="GroupsTableViewCell" rowHeight="126" id="1X7-ua-k7j" customClass="GroupsTableViewCell" customModule="StudyMates" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="126"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1X7-ua-k7j" id="iph-aP-lyd">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="125.66666666666667"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="125.66666666666667"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Oga-zY-Dui">
@@ -56,6 +56,7 @@
                                         <connections>
                                             <outlet property="groupImage" destination="Oga-zY-Dui" id="nIj-RL-Jk3"/>
                                             <outlet property="groupNameField" destination="3KE-5O-1Fb" id="9Pb-kt-r5Q"/>
+                                            <segue destination="WzZ-fh-nBD" kind="push" id="FvM-df-C2b"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -89,10 +90,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qXD-hO-ZwY"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IuT-ke-nKK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1628.75" y="1457.54"/>
+            <point key="canvasLocation" x="1806" y="1049"/>
         </scene>
         <!--Profile-->
         <scene sceneID="r4b-4Z-67H">
